--- a/src/consts.scss
+++ b/src/consts.scss
@@ -1,1 +1,2 @@
 $calendar-width: 1600px;
+$calendar-gutter: 0.5rem;
